--- a/composer.json
+++ b/composer.json
@@ -16,33 +16,37 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=5.3.9",
-        "behat/behat": "^3.4",
-        "behat/mink-selenium2-driver": "^1.3",
-        "csa/guzzle-bundle": "^2.2",
-        "doctrine/doctrine-bundle": "~1.4",
-        "doctrine/orm": "^2.4.8",
-        "friendsofsymfony/user-bundle": "^1.3",
+        "php": ">=7.2",
+        "csa/guzzle-bundle": "3.*",
+        "doctrine/doctrine-bundle": "~1.6",
+        "doctrine/orm": "2.5.*",
+        "friendsofsymfony/user-bundle": "*",
         "gedmo/doctrine-extensions": "^2.4",
         "incenteev/composer-parameter-handler": "~2.0",
         "knplabs/doctrine-behaviors": "^1.5",
-        "sensio/distribution-bundle": "~4.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/distribution-bundle": "^5.0.19",
+        "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "symfony/monolog-bundle": "^3.0.2",
+        "symfony/monolog-bundle": "^3.1.0",
         "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
-        "symfony/symfony": "2.8.*",
-        "symfony/translation": "^2.8",
-        "twig/extensions": "^1.5",
+        "symfony/polyfill-apcu": "^1.0",
+        "symfony/swiftmailer-bundle": "^2.6.4",
+        "symfony/symfony": "3.4.*",
+        "twig/extensions": "^1.3",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "escapestudios/symfony2-coding-standard": "~3.0",
+        "friendsofphp/php-cs-fixer": "~2.0",
+        "nikic/php-parser": "^4.0",
+        "phpmd/phpmd": "~2.0",
+        "phpro/grumphp": "~0.13",
+        "phpstan/phpstan": "^0.10.3",
+        "phpunit/phpunit": "~7.0",
+        "sebastian/phpcpd": "~4.0",
         "sensio/generator-bundle": "~3.0",
-        "symfony/phpunit-bridge": "~2.7",
-        "behat/mink": "~1.7",
-        "behat/mink-extension": "~2.1",
-        "behat/mink-browserkit-driver": "~1.3",
-        "behat/symfony2-extension": "~2.1"
+        "squizlabs/php_codesniffer": "~3.0",
+        "symfony/phpunit-bridge": "~3.0"
     },
     "scripts": {
         "symfony-scripts": [
@@ -63,7 +67,7 @@
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "7.0.10"
+            "php": "7.2"
         },
         "sort-packages": true
     },
@@ -75,7 +79,7 @@
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "2.8-dev"
+            "dev-master": "3.4-dev"
         }
     }
 }
