--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     apache:
         container_name: apache
         build:
-          context: ./apache
+          context: apache
         ports:
             - "8080:80"
         volumes:
@@ -13,24 +13,15 @@ services:
     php7.2:
         container_name: php7.2
         build:
-          context: ./php7.2
-        environment:
-            - DATABASE_URL=mysql://root:@db:3306/fouras
-            - DATABASE_CMS_HOST=db
-            - DATABASE_CMS_USER=root
-            - DATABASE_CMS_PWD=
-            - DATABASE_CMS_DB=cms
-            - APP_ENV=dev
-            - APP_DEBUG=true
-            - CMS_API_URL=http://apache/web/cms/api/
-            - CMS_BASE_URL=/web/cms/
+          context: php7.2
+        env_file: ../.env
         volumes:
             - "../:/var/www/:delegated"
     db:
         container_name: db
         command: --default-authentication-plugin=mysql_native_password
         build:
-            context: ./mysql
+            context: mysql
         restart: always
         environment:
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
