--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=7.2",
-        "ext-intl": "^1.1",
+        "php": ">=7.4",
         "csa/guzzle-bundle": "^3.1",
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/orm": "^2.6",
@@ -24,13 +23,13 @@
         "gedmo/doctrine-extensions": "^2.4",
         "sensio/framework-extra-bundle": "^5.4",
         "stof/doctrine-extensions-bundle": "^1.3",
+        "symfony/intl": "^4.4",
         "symfony/monolog-bundle": "^3.4",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/symfony": "4.3.*",
+        "symfony/symfony": "^4.4",
         "twig/extensions": "^1.5"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
         "friendsofphp/php-cs-fixer": "^2.15",
         "phpmd/phpmd": "^2.7",
         "phpro/grumphp": "^0.15.2",
@@ -51,13 +50,13 @@
         "post-update-cmd": [
         ],
         "compile": [
-            "unzip -o web/cms/cms.zip -d web/cms/"
+            "unzip -q -o web/cms/cms.zip -d web/cms/"
         ]
     },
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "7.2"
+            "php": "7.4"
         },
         "sort-packages": true
     },
