--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_ENV=dev
 APP_DEBUG=true
 
 # Database dsn credential
-DATABASE_URL=mysql://root:@db:3306/fouras
-DATABASE_CMS_URL=mysql://root:@db:3306/cms
+DATABASE_URL=mysql://root:root@db/fouras
+DATABASE_CMS_URL=mysql://root:root@db/cms
 
 # Redis credential
 REDIS_URL=redis://root:@redis:3306/fouras
