--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,7 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    exception_controller: ~
     globals:
         profile_pic_dir: '%profile_pic_dir%'
         vendor_service_pic_dir: '%vendor_service_pic_dir%'
@@ -59,6 +60,10 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+
+sensio_framework_extra:
+    router:
+        annotations: false
 
 fos_user:
     from_email: 
