--- a/.env
+++ b/.env
@@ -3,12 +3,8 @@ APP_ENV=dev
 APP_DEBUG=true
 
 # Database dsn credential
-DATABASE_URL=mysql://root:root@db/fouras
-DATABASE_CMS_URL=mysql://root:root@db/cms
-
-# Redis credential
-REDIS_URL=redis://root:@redis:3306/fouras
+DATABASE_URL=mysql://root:root@fouras_db/fouras
 
 # Cms params
-CMS_API_URL=http://apache/web/cms/api/
+CMS_API_URL=http://fouras_apache/web/cms/api/
 CMS_BASE_URL=/web/cms/
