--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,6 +30,8 @@ framework:
         handler_id: ~
     fragments: ~
     http_method_override: true
+    assets:
+        base_path: '/'
 
 # Twig Configuration
 twig:
@@ -59,6 +61,23 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+
+doctrine_migrations:
+    # List of namespace/path pairs to search for migrations, at least one required
+    migrations_paths:
+        'App\Migrations': '%kernel.project_dir%/migrations'
+
+    # Connection to use for the migrations
+    connection: default
+
+    storage:
+        # Default (SQL table) metadata storage configuration
+        table_storage:
+            table_name: 'doctrine_migration_versions'
+            version_column_name: 'version'
+            version_column_length: 190
+            executed_at_column_name: 'executed_at'
+            execution_time_column_name: 'execution_time'
 
 fos_user:
     from_email: 
