--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,6 +7,7 @@ parameters:
     excludes_analyse:
         - var
         - vendor
+        - migrations
         - tests
     paths:
         - src/
