--- a/src/UserBundle/Resources/config/couple.yml
+++ b/src/UserBundle/Resources/config/couple.yml
@@ -1,35 +1,35 @@
 couple_todo:
     path:     /todo
-    defaults: { _controller: UserBundle:Couple:todo }
+    defaults: { _controller: UserBundle\Controller\CoupleController::todo }
 
 couple_budget:
     path:     /budget
-    defaults: { _controller: UserBundle:Couple:budgetPlanner }
+    defaults: { _controller: UserBundle\Controller\CoupleController::budgetPlanner }
 
 couple_budget_update:
     path:     /budget/update
-    defaults: { _controller: UserBundle:Couple:updateBudget }
+    defaults: { _controller: UserBundle\Controller\CoupleController::updateBudget }
 
 couple_budget_create:
     path:     /budget/create
-    defaults: { _controller: UserBundle:Couple:createBudget }
+    defaults: { _controller: UserBundle\Controller\CoupleController::createBudget }
 
 couple_budget_delete:
     path:     /budget/{id}/{itemId}/delete/
-    defaults: { _controller: UserBundle:Couple:deleteBudget }
+    defaults: { _controller: UserBundle\Controller\CoupleController::deleteBudget }
 
 couple_guestlist:
     path:     /guest/list
-    defaults: { _controller: UserBundle:Couple:guestlist }
+    defaults: { _controller: UserBundle\Controller\CoupleController::guestlist }
 
 couple_guest_update:
     path:     /guest/update
-    defaults: { _controller: UserBundle:Couple:updateGuest }
+    defaults: { _controller: UserBundle\Controller\CoupleController::updateGuest }
 
 couple_guest_create:
     path:     /guest/create
-    defaults: { _controller: UserBundle:Couple:createGuest }
+    defaults: { _controller: UserBundle\Controller\CoupleController::createGuest }
 
 couple_guest_delete:
     path:     /guest/{id}/delete/
-    defaults: { _controller: UserBundle:Couple:deleteGuest }
+    defaults: { _controller: UserBundle\Controller\CoupleController::deleteGuest }
