feat: Adding liip_imagine for runtime image resizing

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -43,3 +43,6 @@ vendor_actions:
     prefix: /{_locale}/vendor
     requirements:
         _locale: ar|fr|en
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.yaml"
