--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 /web/bundles/
 /web/uploads/
-/app/bootstrap.php.cache
+/web/media/
 /var/
-/app/config/parameters.yml
-/app/phpunit.xml
-/build/
 /vendor/
 /bin/
 /composer.phar
@@ -13,5 +10,8 @@
 !/cms/.htaccess
 !/cms/plugins
 !/cms/configuration
+!/web/uploads/profiles/vendor_service/README.md
+!/web/uploads/services/README.md
+!/media/README.md
 .idea/
 *.cache
