--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,8 @@ twig:
     globals:
         profile_pic_dir: '%profile_pic_dir%'
         vendor_service_pic_dir: '%vendor_service_pic_dir%'
+        service_pic_dir: '%service_pic_dir%'
+        map_icon_dir: '%map_icon_dir%'
         maps_key: '%maps.embedded.api.key%'
         cms_base_url: '%cms_base_url%'
 
@@ -113,3 +115,46 @@ csa_guzzle:
                 timeout: 5.0
                 # headers:
                 #     Accept: application/vnd.github.v3+json
+
+liip_imagine:
+    data_loader: fouras_loader
+    loaders:
+        default:
+            filesystem:
+                data_root: '%kernel.project_dir%/web'
+    resolvers :
+        default :
+            web_path :
+                web_root: '%kernel.project_dir%/web'
+    cache: default
+    filter_sets:
+        64x64:
+            default_image: /web/assets/images/default/unavailable-64x64.jpg
+            quality: 90
+            filters:
+                thumbnail: { size: [64, 64], mode: outbound }
+        150x100:
+            default_image: /web/assets/images/default/unavailable-150x100.jpg
+            quality: 90
+            filters:
+                thumbnail: { size: [150, 100], mode: outbound }
+        300x300:
+            default_image: /web/assets/images/default/unavailable-300x300.jpg
+            quality: 90
+            filters:
+                thumbnail: { size: [300, 300], mode: outbound }
+        340x240:
+            default_image: /web/assets/images/default/unavailable-340x240.jpg
+            quality: 90
+            filters:
+                thumbnail: { size: [340, 240], mode: outbound }
+        320x360:
+            default_image: /web/assets/images/default/unavailable-320x360.jpg
+            quality: 90
+            filters:
+                thumbnail: { size: [320, 360], mode: outbound }
+        440x300:
+            default_image: /web/assets/images/default/unavailable-440x300.jpg
+            quality: 90
+            filters:
+                thumbnail: { size: [440, 300], mode: outbound }
