--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -19,7 +19,12 @@ parameters:
         rating: ~
         border: ~
     profile_pic_dir: 'uploads/profiles/'
-    vendor_service_pic_dir: 'uploads/profiles/vendor_service'
+    service_pic_dir: 'uploads/services/'
+    vendor_service_pic_dir: 'uploads/profiles/vendor_service/'
+    map_icon_dir: 'assets/images/icons/'
+
+    upload_service_pic_dir: '%kernel.project_dir%/web/%service_pic_dir%'
+
 
     maps.embedded.api.key : AIzaSyC7DfJcfvHtlpZLcEjgivtmjnyXlky0GB4
 
@@ -67,18 +72,25 @@ services:
     Controller\:
         resource: '../../src/Controller/*'
 
-    Listener\:
-        resource: '../../src/Listener/*'
+    Infrastructure\:
+        resource: '../../src/Infrastructure/*'
+
+    Services\:
+        resource: '../../src/Services/*'
 
     FOS\UserBundle\Form\Factory\FactoryInterface: "@fos_user.profile.form.factory"
 
-    Listener\LocaleListener:
+    Infrastructure\Listener\LocaleListener:
         arguments: ['%kernel.default_locale%']
         tags:
             - { name: kernel.event_subscriber }
 
+    Infrastructure\Listener\UserListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.controller }
+
     Services\GravatarService:
-        arguments: ['%gravatar.default_options%', '@assets.packages']
+        arguments: ['%gravatar.default_options%']
 
     Services\CmsService:
         arguments:
@@ -86,3 +98,9 @@ services:
             - '%cms_api_key%'
             - '@request_stack'
             - '%cms_cat_id%'
+
+    Infrastructure\Loader\FileSystemLoader:
+        arguments:
+            - "%kernel.project_dir%"
+        tags:
+            - { name: "liip_imagine.binary.loader", loader: fouras_loader }
