Revert "feat: Deal with deprecation errors"
This reverts commit 4cf9b1bb526fc99f03b8cb1c155a6e43a55d43fd.

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -13,7 +13,7 @@ services:
 
     AppBundle\Services\GravatarService:
         class: AppBundle\Services\GravatarService
-        arguments: ['%gravatar.default_options%']
+        arguments: ['%gravatar.default_options%', '@assets.packages']
 
     AppBundle\Services\CmsService:
         arguments:
