--- a/src/UserBundle/Resources/config/vendor.yml
+++ b/src/UserBundle/Resources/config/vendor.yml
@@ -1,35 +1,35 @@
 vendor_dashboard:
     path:     /dashboard
-    defaults: { _controller: UserBundle\Controller\VendorController::dashboardAction }
+    defaults: { _controller: UserBundle:Vendor:dashboard }
 
 vendor_service:
     path:     /service
-    defaults: { _controller: UserBundle\Controller\VendorController::serviceAction }
+    defaults: { _controller: UserBundle:Vendor:service }
 
 vendor_service_new:
     path:     /service/new
-    defaults: { _controller: UserBundle\Controller\VendorController::newServiceAction }
+    defaults: { _controller: UserBundle:Vendor:newService }
 
 vendor_service_edit:
     path:     /service/{id}/edit
-    defaults: { _controller: UserBundle\Controller\VendorController::editServiceAction }
+    defaults: { _controller: UserBundle:Vendor:editService }
 
 vendor_service_create:
     path:     /service/create
-    defaults: { _controller: UserBundle\Controller\VendorController::createServiceAction }
+    defaults: { _controller: UserBundle:Vendor:createService }
 
 vendor_service_update:
     path:     /service/{id}/update
-    defaults: { _controller: UserBundle\Controller\VendorController::updateServiceAction }
+    defaults: { _controller: UserBundle:Vendor:updateService }
 
 vendor_service_delete:
     path:     /service/{id}/delete
-    defaults: { _controller: UserBundle\Controller\VendorController::deleteServiceAction }
+    defaults: { _controller: UserBundle:Vendor:deleteService }
 
 vendor_todo:
     path:     /tasks
-    defaults: { _controller: UserBundle\Controller\VendorController::tasksAction }
+    defaults: { _controller: UserBundle:Vendor:tasks }
 
 vendor_inquery:
     path:     /inquery
-    defaults: { _controller: UserBundle\Controller\VendorController::inqueryAction }
+    defaults: { _controller: UserBundle:Vendor:inquery }
