feat: Send email when enquery is sent

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ APP_DEBUG=true
 # Database dsn credential
 DATABASE_URL=mysql://root:root@fouras_db/fouras
 
+# Email smtp
+MAILER_URL=smtp://user:passwd@localhost
+
 # Cms params
 CMS_API_URL=http://fouras_apache/web/cms/api/
 CMS_BASE_URL=/web/cms/
