--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -30,5 +30,8 @@ monolog:
         #    type: chromephp
         #    level: info
 
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
+swiftmailer:
+    disable_delivery: true
+    #delivery_addresses: ['dev@example.com']
+    delivery_whitelist:
+        - '/@yopmail\.com$/'
