feat: Send email when enquery is sent

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,7 @@
 imports:
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: packages/swiftmailer.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -97,14 +98,6 @@ fos_user:
             type: Form\RegistrationFormType
     service:
         mailer: fos_user.mailer.twig_swift
-
-# Swiftmailer Configuration
-swiftmailer:
-    transport: '%mailer_transport%'
-    host: '%mailer_host%'
-    username: '%mailer_user%'
-    password: '%mailer_password%'
-    spool: { type: memory }
 
 csa_guzzle:
     profiler: '%kernel.debug%'
