--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,7 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_themes: ['front/fields.html.twig']
     globals:
         profile_pic_dir: '%profile_pic_dir%'
         vendor_service_pic_dir: '%vendor_service_pic_dir%'
