--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,33 +1,13 @@
 imports:
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: packages/framework.yml }
     - { resource: packages/swiftmailer.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: fr
-
-framework:
-    #esi: ~
-    translator: { fallbacks: ['%locale%'] }
-    secret: '%secret%'
-    router:
-        resource: '%kernel.project_dir%/app/config/routing.yml'
-        strict_requirements: ~
-    form: ~
-    csrf_protection: ~
-    validation: { enable_annotations: true }
-    #serializer: { enable_annotations: true }
-    default_locale: '%locale%'
-    trusted_hosts: ~
-    session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id: ~
-    fragments: ~
-    http_method_override: true
-    assets:
-        base_path: '/'
 
 # Twig Configuration
 twig:
