feat: Adding custom error page

--- a/containers/apache/httpd-vhosts.conf
+++ b/containers/apache/httpd-vhosts.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php7.4:9020/var/www/$1
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php7.4:9020/var/www/web/$1
 
-    DocumentRoot /var/www/html/
+    DocumentRoot /var/www/html/web/
 
-    <Directory /var/www/html/>
+    <Directory /var/www/html/web/>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
